--- a/external/listOrdem.html
+++ b/external/listOrdem.html
@@ -14,6 +14,17 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://kit.fontawesome.com/313adf4cdc.js" crossorigin="anonymous"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const largura = window.innerWidth;
+            const altura = window.innerHeight;
+
+            if (largura <= 1366 && altura <= 768) {
+                document.body.style.zoom = "80%";
+            }
+        });
+    </script>
+
     <style>
         @media (max-width: 768px) {
             body, .form-control, .modal-content, table, th, td, button {
@@ -397,7 +408,7 @@
                     <table class="table table-striped table-hover">
                         <thead><tr><th>Descrição</th><th>Quantidade</th><th>Dias Uso</th></tr></thead>
                         <tbody>
-                            ${itens.map(i => `<tr><td>${i.descricao}</td><td>${i.quantidade}</td><td>${i.dias_uso}</td></tr>`).join('')}
+                            ${itens.map(i => `<tr><td>${i.descricao}<br>${i.observacao}</td><td>${i.quantidade}</td><td>${i.dias_uso}</td></tr>`).join('')}
                         </tbody>
                     </table>
                     <h6><strong>Serviços</strong></h6>
