--- a/external/createOrder.html
+++ b/external/createOrder.html
@@ -338,7 +338,7 @@
 <script src="bsb/plugins/bootstrap/js/bootstrap.js"></script>
 <script src="bsb/plugins/sweetalert/sweetalert.min.js"></script>
 <script src="https://kit.fontawesome.com/313adf4cdc.js" crossorigin="anonymous"></script>
-<script src="js/ordem-servico2.js?"></script>
+<script src="js/ordem-servico3.js"></script>
 <script src="bsb/plugins/jquery-inputmask/jquery.inputmask.bundle.js"></script>
 
 <script>
