--- a/external/createProposta.html
+++ b/external/createProposta.html
@@ -28,8 +28,6 @@
         });
     </script>
 
-
-
 </head>
 <body class="theme-blue">
 <div class="container-fluid">
@@ -39,10 +37,9 @@
 
     <div class="card">
         <div class="header" style="position: relative;">
-            <h2>Dados da Proposta</h2>
+            <h2>NOVA PORPOSTA</h2>
             <button class="btn btn-success" onclick="retornarLista()" style="position: absolute; top: 10px; right: 10px;">Retornar Lista</button>
         </div>
-
 
         <div class="body">
             <form id="form-ordem">
@@ -245,6 +242,20 @@
                     <div class="body">
                         <select id="selectMaterial" class="form-control" style="width: 100%;">
                             <option value="">Selecione o material...</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="card" id="cardLocalEvento" style="margin-bottom: 16px;">
+                    <div class="header">
+                        <strong>Selecionar Local do Evento</strong>
+                        <button type="button" id="btnNovoLocalEvento" class="btn btn-primary btn-sm" style="float: right; margin-top: -5px;">
+                            <i class="fa fa-plus"></i> Novo Local
+                        </button>
+                    </div>
+                    <div class="body">
+                        <select id="selectLocalEvento" class="form-control">
+                            <option value="">Selecione o local...</option>
                         </select>
                     </div>
                 </div>
