remove maps api

--- a/external/createEvento.html
+++ b/external/createEvento.html
@@ -154,9 +154,6 @@
     </div>
 </div>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCR1Ah_f24oWlsWaOoZf1rqIPuTzS0nyA8&libraries=places"></script>
-
-
 <script>
     const baseUrl = window.location.hostname !== 'localhost' ? 'https://bionetecnologia.com.br/crm' : 'http://localhost/bione';
     const urlParams = new URLSearchParams(window.location.search);
@@ -252,7 +249,7 @@
         });
     });
 
-    // GOOGLE AUTOCOMPLETE PARA LOCAL DO EVENTO
+/*    // GOOGLE AUTOCOMPLETE PARA LOCAL DO EVENTO
     function initAutocomplete() {
         const input = document.getElementById('local');
         if (!input) return;
@@ -293,7 +290,7 @@
 
 
     // Inicializar autocomplete após carregamento da página
-    google.maps.event.addDomListener(window, 'load', initAutocomplete);
+    google.maps.event.addDomListener(window, 'load', initAutocomplete);*/
 
 </script>
 
